examples/errors/parsing/spec_take-empty-rhs.cn
fun incP : Int -> Pred Int [spec] = {
  n -> return (n + 1)
}

fun f : Int -> Pred Int [spec] = {
  n ->
  take x = ;
  return x
}

main : () [impure] = ()
